@@ -103,6 +103,7 @@ Detailed changes:
 	- FIXED: isValidRenderTexture checks that it is TEXTURE_TYPE_RENDER_TEXTURE
 	- FIXED: isValidTexture on CreateMaterial
 	- CHANGED: Renamed start, end arguments to a, b to avoid using Lua keyword "end" in argument names
+	- ADDED: Argumets stored in "RL.arg" array
 
 ------------------------------------------------------------------------
 Release:	ReiLua version 0.4.0		Using Raylib 4.2
